<resources>
    <string name="app_name">FoodSage</string>
    <string name="login">Login</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="recipe_generation">Recipe Generation</string>
    <string name="weekly_meal_plan">Weekly Meal Plan</string>
    <string name="settings">Settings</string>
    <string name="equipment">Equipment</string>
    <string name="diet_aim">Dietary Aim</string>
    <string name="personal_details">Personal details</string>
    <string name="supermarket_accounts">Supermarket accounts</string>
    <string name="use_saved_recipe">Use a saved recipe</string>
    <string name="enter_a_recipe">Enter your own recipe</string>
    <string name="generate_a_recipe">Generate a new recipe</string>
    <string name="quick_generation">Quickly generate a new recipe</string>
</resources>